--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <table cellspacing="40px">
         <tr>
-            <td><img src="images/mikhail.jpg" alt="Photo profile" /></td>
+            <td><img src="images/mikhail.png" alt="Photo profile" /></td>
             <td>
                 <h1>Mikhail Shcherbakov</h1>
                 <p>Operator CNC</p>
