--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <style>
     body {
-        background-color: rgb(228, 250, 245);
+        background-color: rgb(228, 250, 246);
     }
 </style>
 
 <body>
     <table cellspacing="40px">
         <tr>
-            <td><img src="images/mikhail.png" alt="Photo profile" /></td>
+            <td><img src="images/Mikhail.png" alt="Photo profile" /></td>
             <td>
                 <h1>Mikhail Shcherbakov</h1>
                 <p>Operator CNC</p>
